tests/src/frontend/typechecking/exhaustiveness/invalid/non_nested_overlapping1.sk
base class A {
  children =
  | B(Int)
}
fun test(): String {
  B(1) match {
  | B _ -> "Fail\n"
  | B(1) -> "Wrong\n"
  }
}
